# DZ36

Base/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Chat/: CMakeLists.txt  Database.cpp  Database.h  connect.cpp  connect.h  connect.ui  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  registrationform.ui  startscreen.cpp  startscreen.h  startscreen.ui
Server/: CMakeLists.txt  Database.cpp  Database.h  connect.cpp  connect.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
